исправил замечания, поменял ArrayList на LinkedList и число 10 сделал константой